# seeder

./: README-ja.md  README.md
seeder/: Cargo.toml  column.json  data.json
seeder/src/: console.rs  db.rs  json.rs  json_utils.rs  lib.rs  main.rs
seeder/test/: column.json  test.json
